--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,6 @@
   "$schema": "./node_modules/nx/schemas/workspace-schema.json",
   "version": 2,
   "projects": {
-    "pms-ui": "apps/pms-ui",
-    "pms-ui-e2e": "apps/pms-ui-e2e"
+    "pms-ui": "apps/pms-ui"
   }
 }
