--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,7 @@
   "projects": {
     "dialog": "libs/dialog",
     "pages": "libs/pages",
-    "pms-ui": "apps/pms-ui"
+    "pms-ui": "apps/pms-ui",
+    "shared": "libs/shared"
   }
 }
