--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~14.0.0",
     "@angular/platform-browser-dynamic": "~14.0.0",
     "@angular/router": "~14.0.0",
+    "@netlify-builder/deploy": "^5.0.0",
     "@nrwl/angular": "14.4.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
