--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^6.0.1",
     "@nrwl/angular": "14.4.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
