--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@pms/dialog": ["libs/dialog/src/index.ts"],
       "@pms/pages": ["libs/pages/src/index.ts"],
+      "@pms/parking-info": ["libs/parking-info/src/index.ts"],
       "@pms/shared": ["libs/shared/src/index.ts"]
     }
   },
