--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.0.1",
+    "@ngneat/until-destroy": "^9.2.1",
     "@nrwl/angular": "14.4.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
