--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~14.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/event-emitter": "^1.2.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.0.1",
     "@ngneat/until-destroy": "^9.2.1",
