--- a/apps/pms-ui/tsconfig.editor.json
+++ b/apps/pms-ui/tsconfig.editor.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "../../libs/shared/src/app.service.ts"],
   "compilerOptions": {
     "types": ["jest", "node"]
   }
